# tasks-tracker

./: Cargo.toml  NOTES.md  OBJECTIVES.md  README.md  TODO.md  USECASE.md
.github/workflows/: rust.yml
api/: Cargo.toml  openapi.yaml
api/src/: authorize.rs  main.rs
client/: Cargo.toml  README.md
client/src/: error.rs  lib.rs
common/: Cargo.toml
common/src/: lib.rs
src/: authorize.rs  main.rs
