[package]
name = "tasks-tracker-client"
version = "0.2.0"
edition = "2021"

[dependencies]
bincode = {version="2.0.0-rc.3", features=["serde"]}
uuid = {version="1.8", features= ["serde", "v4"], default-features = false }
url = {version="2.5", features=["serde"]}
reqwest = {version="0.12.4", default-features= false }
tasks-tracker-common = {path = "../common", features=["client"]}
thiserror = "1.0"
derive_more = {version="1.0", default-features=false, features=["deref"]}
client-plug-traits = {version="0.1.0", git="https://github.com/Cyrix126/client-plug-traits", default-features=false, features=["tasks_tracker_api_client", "bincode"]}
